# erect

./: .gitignore  README.md  pyproject.toml
erect/: __init__.py  cli.py  env.py
erect/core/: __init__.py  context.py  env.py  file.py  task.py
erect/diagnostic/: graph.py  timeline.py
erect/lib/: __init__.py  gcc.py  jinja2.py
erect/lib/gcc/: __init__.py  module_mapper.py
erect/util/: load.py  module_mapper.py  subprocess.py  version.py
examples/hello_modules/: blueprint.py  foo.cpp  main.cpp
examples/hello_world/: blueprint.py
